Working like button

--- a/js-frontend-flavorworld/index.html
+++ b/js-frontend-flavorworld/index.html
@@ -1,11 +1,57 @@
+<!--
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flavor World</title>
-</head>
-<body>
-    <script defer type="text/javascript" src="src/index.js"></script>
-</body>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8" />
+        <title>Flavor World</title>
+        <link rel="stylesheet" href="styles/style.css" />
+    </head>
+    <body>
+        <div id="dish-collection"></div>
+        <script defer type="text/javascript" src="src/index.js"></script>
+    </body>
+</html>
+-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Flavor World</title>
+        <link rel="stylesheet" href="styles/style.css" />
+    </head>
+    <body>
+        <header>
+            <!-- <ul class="nav">
+                <li class="nav-item showMenu">
+                <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item showMenu">
+                <a class="nav-link active" href="#">Dishes</a>
+                </li>
+                <li class="nav-item hideMenu">
+                <a class="nav-link active" href="#">Profile</a>
+                </li>
+                <li class="nav-item dropdown hideMenu">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sort-By</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Origin</a>
+                </div>
+                </li>
+                <li class="nav-item hideLogin">
+                <a class="nav-link active" href="#">Sign-Up</a>
+                </li>
+                <li class="nav-item hideLogin">
+                <a class="nav-link active" href="#">Login</a>
+                </li>
+                <li class="nav-item hideMenu">
+                <a class="nav-link active" href="#">Logout</a>
+                </li> -->
+            <!-- </ul> -->
+
+        </header>
+        <div id="root">
+
+        </div>
+        <div id="dish-collection"></div>
+        <script defer type="text/javascript" src="src/index.js"></script>
+    </body>
 </html>
