--- a/js-frontend-flavorworld/index.html
+++ b/js-frontend-flavorworld/index.html
@@ -19,7 +19,7 @@
     
     <!-- CAROUSEL -->
 
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="4000">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -27,21 +27,21 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://res.cloudinary.com/dn1e07eul/image/upload/v1601489145/FlavorWorld/banner-1_jd1nvu.jpg" style="height: 85vh" class="d-block w-100" alt="...">
+          <img src="https://res.cloudinary.com/dn1e07eul/image/upload/v1601489145/FlavorWorld/banner-1_jd1nvu.jpg" style="height: 50vh" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>Welcome to <strong>FlavorWorld!</strong></h1>
+            <p>by Samir & Emmanuel</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://res.cloudinary.com/dn1e07eul/image/upload/v1601518033/FlavorWorld/burger_crop02-1_frlpz5.jpg" style ="height: 50vh" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1>Share Your Experience</h1>
             <p></p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" style ="height: 85vh" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h1>Share Your Experience</h1>
-            <p> Picture Or No One Will Believe...</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="https://res.cloudinary.com/dn1e07eul/image/upload/v1601489175/FlavorWorld/banner-7_xzz51j.jpg" style ="height: 85vh;" class="d-block w-100" alt="...">
+          <img src="https://res.cloudinary.com/dn1e07eul/image/upload/v1601489175/FlavorWorld/banner-7_xzz51j.jpg" style ="height: 50vh;" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>Flavors From Around The Globe</h1>
             <p></p>
