--- a/js-frontend-flavorworld/index.html
+++ b/js-frontend-flavorworld/index.html
@@ -36,15 +36,15 @@
         <div class="carousel-item">
           <img src="https://res.cloudinary.com/dn1e07eul/image/upload/v1601518033/FlavorWorld/burger_crop02-1_frlpz5.jpg" style ="height: 50vh" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h1>Share Your Experience</h1>
-            <p></p>
+            <h1>Savor Your Experience</h1>
+            <p>Bon Appetit!</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="https://res.cloudinary.com/dn1e07eul/image/upload/v1601489175/FlavorWorld/banner-7_xzz51j.jpg" style ="height: 50vh;" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>Flavors From Around The Globe</h1>
-            <p></p>
+            <p>Be Adventurous!</p>
           </div>
         </div>
       </div>
